# divisibility_check

./: Cargo.toml  LICENSE  README.md
check/: Cargo.toml
check/src/: lib.rs
src/: main.rs
